Random and Challenge Mode Added

--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
               </button>
             </li>
             <li>
-              <btn id="restartBtn" class="btn btn-filled btn-sm hoverlight">Restart</btn>
-            </li>
-            <li>
               <btn id="endBtn" class="btn btn-filled btn-sm hoverlight" style="display:none">End Game</btn>
             </li>
           </ul>
@@ -145,10 +142,10 @@
     </div>
   </div>
 
-  <script src="js/random.js" type="text/javascript"></script>
-  <script src="js/game.js" type="text/javascript"></script>
   <script src="js/multi.js" type="text/javascript"></script>
-
+  <script src="js/random.js" type="text/javascript"></script>
+  <script src="js/chal.js" type="text/javascript"></script>
+  <script src="js/game.js" type="text/javascript"></script>
 </body>
 
 </html>
